<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        app:srcCompat="@mipmap/save_button" />

    <TextView
        android:id="@+id/textNameOfBookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NameOfBookmark"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/editNameOfBookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textLongMessage"
        android:text="" />

    <TextView
        android:id="@+id/textPositionInTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PositionInTime"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editPositionInTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/textComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Comment"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:contentDescription="@string/Comment"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:lines="4" />


</LinearLayout>